# bidmart-auth-be

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  SETUP_GUIDE.md
.github/: dependabot.yml
.github/workflows/: branch-policy.yml  cd-docker.yml  cd.yml  ci.yml  codeql.yml  promote.yml  scorecard.yml
migrations/: 20260220034157_0001_init_auth.sql  schema.sql
scripts/: setup-branch-protection.ps1  setup-branch-protection.sh
src/: auth.rs  config.rs  error.rs  lib.rs  main.rs  models.rs  state.rs
src/handlers/: auth.rs  health.rs  mod.rs
src/infrastructure/: mod.rs
src/infrastructure/config/: mod.rs
src/infrastructure/database/: connection.rs
src/infrastructure/filters/: error_handler.rs
src/infrastructure/logger/: mod.rs  tracer.rs
src/modules/example/application/dto/: mod.rs
src/modules/example/application/use_cases/: mod.rs
src/modules/example/domain/: mod.rs
src/modules/example/domain/entities/: mod.rs
src/modules/example/domain/errors/: mod.rs
src/modules/example/domain/traits/: mod.rs
src/modules/example/infrastructure/: mod.rs
src/modules/example/infrastructure/controllers/: mod.rs
src/modules/example/infrastructure/repositories/: mod.rs
src/modules/example/infrastructure/services/: mod.rs
src/shared/domain/: mod.rs
tests/: service_test.rs  use_case_test.rs  user_entity_test.rs
tests/use_cases/: mocks.rs
