[package]
name = "bidmart-auth-be"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
argon2 = { version = "0.5.3", features = ["std"] }
axum = { version = "0.7.9", features = ["macros"] }
base64 = "0.22.1"
chrono = { version = "0.4.40", features = ["serde"] }
dotenvy = "0.15.7"
http = "1.3.1"
jsonwebtoken = "9.3.1"
password-hash = "0.5.0"
rand = "0.8.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["rt-multi-thread", "macros", "signal"] }
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
