[package]
name = "bidmart-auth-be"
version = "0.1.0"
edition = "2021"
description = "BidMart Auth Service - Clean Architecture Axum API"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

tokio = { version = "1", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

validator = { version = "0.16", features = ["derive"] }

thiserror = "1.0"
anyhow = "1.0"

sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate"] }

config = "0.14"
dotenv = "0.15"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
scrypt = "0.10"
rand = "0.8"
jsonwebtoken = "9.2"
async-trait = "0.1"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
axum = "0.7"

tokio-test = "0.4"
